add README and CSS styling

--- a/views/definition.erb
+++ b/views/definition.erb
@@ -1,4 +1,12 @@
+<div class="inner cover">
 <h1><%= @definition.def() %></h1>
 
 <a href="/word/<%= @word.id%>/definition/new">Add Definition</a>
 <a href="/">Home</a>
+</br>
+</br>
+</br>
+
+<a href="/words"><button type="button" name="button" class="btn btn-lg btn-danger"></button><h4>previous</h4></a>
+<a href="/"><button type="button" name="button" class="btn btn-lg btn-default"></button><h4>Home</h4></a>
+</div>
