--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,6 @@
 <h1>Add a word:</h1>
   <form class="" action="/words" method="post">
     <label for="word">Word:</label>
-    <input name="word" id="word" type="text">
-    <button type="submit" name="button">Add a new Word</button>
+    <input class="btn btn-default" name="word" id="word" type="text">
+    <button type="submit" class="btn btn-danger">Add a new Word</button>
   </form>
