--- a/views/word_definition_form.erb
+++ b/views/word_definition_form.erb
@@ -4,7 +4,7 @@
   <input id='word_id' name='word_id' type='hidden' value='<%= @word.id() %>'>
 
   <label for='definition'>Definition</label>
-  <input id='definition' name='definition' type='text'>
+  <input class="btn btn-default" id='definition' name='definition' type='text'>
 
-  <button type="submit">Add a Definition</button>
+  <button type="submit" class="btn btn-danger">Add a Definition</button>
 </form>
