--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,13 +3,41 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Word Count</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <title>Words_Definition</title>
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/cover.css">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
 <body>
+  <div class="site-wrapper">
 
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand"><a href="/">Words Definition</a></h3>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li class="active"><a href="https://serene-anchorage-51190.herokuapp.com/">Home</a></li>
+                  <li><a href="https://github.com/sbsuf/word_count/blob/master/README.md">README</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
         <%= yield %>
 
+
+        </div>
+
+      </div>
+
+    </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="../js/jquery.min.js"><\/script>')</script>
+  <script src="../js/bootstrap.min.js"></script>
 
 
 
