--- a/views/words.erb
+++ b/views/words.erb
@@ -1,6 +1,6 @@
 <h1>Words</h1>
 <ul>
   <% @words.each() do |word| %>
-    <li><a href="/words/<%= word.id() %>"><%= word.word() %></a></li>
+    <h3><li><a href="/words/<%= word.id() %>"><%= word.word() %></a></li></h3>
   <% end %>
 </ul>
