update the README

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,7 +21,7 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="https://serene-anchorage-51190.herokuapp.com/">Home</a></li>
-                  <li><a href="https://github.com/sbsuf/word_count/blob/master/README.md">README</a></li>
+                  <li><a href="https://github.com/sbsuf/Word_definition/blob/master/README.MD">README</a></li>
                   <li><a href="#">Contact</a></li>
                 </ul>
               </nav>
